--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Environment variables
+.env
+.env.local
+.env.*.local
+
 # Python
 __pycache__/
 *.py[cod]
@@ -7,26 +12,9 @@ __pycache__/
 venv/
 env/
 ENV/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
 *.egg-info/
-.installed.cfg
-*.egg
-
-# Environment variables
-.env
-.env.local
-.env.*.local
+dist/
+build/
 
 # IDEs
 .vscode/
@@ -36,36 +24,28 @@ wheels/
 *~
 .DS_Store
 
-# Testing
-.pytest_cache/
-.coverage
-htmlcov/
-.tox/
-
 # Database
 *.db
 *.sqlite
 *.sqlite3
 
+# Alembic - KEEP these, IGNORE others
+# alembic/versions/*.py  # Keep migration files
+alembic/__pycache__/
+*.pyc
+
 # Logs
 *.log
-logs/
 
-# Alembic
-# Keep alembic/ folder but ignore __pycache__
-alembic/__pycache__/
-alembic/versions/__pycache__/
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
 
-# Docker
-docker-compose.override.yml
+# Docker volumes (already in docker-compose)
+postgres_data/
 
-# macOS
+# MacOS
 .DS_Store
 .AppleDouble
 .LSOverride
-
-# Temporary files
-*.tmp
-*.bak
-*.swp
-*~.nib
