--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ sqlalchemy==2.0.25
 alembic==1.13.1
 psycopg2-binary==2.9.9
 python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
+passlib[bcrypt]==4.0.1
 python-dotenv==1.0.0
 pydantic==2.5.3
-pydantic-settings==2.1.0
+pydantic-settings==2.1.0email-validator==2.1.0
